# owl

./: .gitignore  Dockerfile  LICENSE  README.md  docker-build.sh  docker-run.sh  setup.sh
benchmarks/: README.md  aes.sh  cmov-runner.sh  crypto-core.sh  runner.rkt  rv-runner.sh  rv-single-cycle.sh  rv-two-stage.sh
benchmarks/instructions/: cmov.in  rvi.cvc4.in  rvi.in  zbkb.cvc4.in  zbkb.in  zbkc.cvc4.in  zbkc.in  zbkc.z3.in
hw/: README.md  __init__.py  generate_ir.py
hw/aes/: LICENSE.md  README.md  aes.py  aes_instance.py  libutils.py
hw/crypto-core/: __init__.py  generate_cpu.py  test_cpu.py
hw/crypto-core/src/: __init__.py  alu.py  control.py  cpu.py  cpu_cmov.py  decode.py  mem.py  program.py  rf.py
hw/crypto-core/test/: compile_tests
hw/crypto-core/test/asm/: and.S  andi.S  auipc.S  bgeu.S  bltu.S  bne.S  j.S  jalr.S  lbu.S  lh.S  lui.S  simple.S  srai.S  srl.S  sub.S  sw.S  xori.S
hw/crypto-core/test/examples/: README.md  alu.s  cmov.s  jump.s  lui.s  zero.s
hw/crypto-core/test/mysha/: Makefile  asm  inst2impl  mysha-brless.c  mysha-brless.out  mysha.c  sha256_synth_resutls
hw/crypto-core/test/pyrtltest-gen/: How2Use.md  Makefile  converter.c  test.s
hw/crypto-core/test/strlen/: Makefile  asm  link.ld  startup.s  strlen.c  strlen.out
hw/rv-cpu/: generate_cpu.py  test_cpu.py
hw/rv-cpu/src/: __init__.py  alu.py  control.py  cpu.py  mem.py  program.py  util.py
hw/rv-cpu/test/asm/: add.S  addi.S  beq.S  bge.S  blt.S  jal.S  lb.S  lhu.S  lw.S  or.S  ori.S  sb.S  sh.S  sll.S  slli.S  slt.S  slti.S  sra.S  srli.S  xor.S
hw/rv-cpu/test/examples/: branch.s  (+5 more)
ila-to-rosette/: CMakeLists.txt
ila-to-rosette/ilas/: LICENSE
ila-to-rosette/ilas/ila-include/: aes_128.h  aes_ila.h  encoding.h  helpers.h  riscvila.h
ila-to-rosette/ilas/ila-src/: aes_128.cc  aes_ila.cc  helpers.cc  pipe_ila.cc  riscvila.cc  simple_cpu.cc
ila-to-rosette/include/: state_map.h  translator.h
ila-to-rosette/src/: main.cc  state_map.cc  translator.cc
ila-to-rosette/test/: test_decode.cc
oyster/: main.rkt  oyster.rkt  util.rkt
pyrtl-code-gen/: README.md  ctrl-gen-runner.rkt  rvi-single-cycle.sh  zbkb-single-cycle.sh  zbkc-single-cycle.sh
spec/: aes.rkt  cmov-ila.rkt  rvi-decode.rkt  rvi-ila.rkt  zbkb-decode.rkt  zbkb-ila.rkt  zbkc-decode.rkt  zbkc-ila.rkt
(+6 files in other folders)
